{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 37,
  "lineage": "fe89d025-48b1-9896-efa2-cb55e9c5fcd7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "vpc_default_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443907866868:security-group/sg-0f981ea37c3ea218c",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f981ea37c3ea218c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "443907866868",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "etl-vpc-default-sg"
            },
            "tags_all": {
              "Name": "etl-vpc-default-sg"
            },
            "vpc_id": "vpc-023bf567ad1b02f91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-for-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002e1d9f3757d4a66",
            "associate_with_private_ip": "10.1.0.5",
            "association_id": "eipassoc-0903cea1ac35462c4",
            "domain": "vpc",
            "id": "eipalloc-002e1d9f3757d4a66",
            "network_border_group": "us-east-1",
            "network_interface": "eni-037b4462373dffe5b",
            "private_dns": "ip-10-1-1-193.ec2.internal",
            "private_ip": "10.1.1.193",
            "public_dns": "ec2-52-20-11-216.compute-1.amazonaws.com",
            "public_ip": "52.20.11.216",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443907866868:internet-gateway/igw-00617ab245ae2ce64",
            "id": "igw-00617ab245ae2ce64",
            "owner_id": "443907866868",
            "tags": {
              "Name": "etl-igw"
            },
            "tags_all": {
              "Name": "etl-igw"
            },
            "vpc_id": "vpc-023bf567ad1b02f91"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002e1d9f3757d4a66",
            "connectivity_type": "public",
            "id": "nat-05f4af31e41c20ebe",
            "network_interface_id": "eni-037b4462373dffe5b",
            "private_ip": "10.1.1.193",
            "public_ip": "52.20.11.216",
            "subnet_id": "subnet-0d0a93a1e751beeae",
            "tags": {
              "Name": "etl-nat-gw"
            },
            "tags_all": {
              "Name": "etl-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_internet_gateway.igw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01c8fe291fdbc94f41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05f4af31e41c20ebe",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01c8fe291fdbc94f4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-igw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00617ab245ae2ce64",
            "id": "r-rtb-00d3c98a5e1e4e3e51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00d3c98a5e1e4e3e5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route-table",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443907866868:route-table/rtb-01c8fe291fdbc94f4",
            "id": "rtb-01c8fe291fdbc94f4",
            "owner_id": "443907866868",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05f4af31e41c20ebe",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "etl-private-route-table"
            },
            "tags_all": {
              "Name": "etl-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-023bf567ad1b02f91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443907866868:route-table/rtb-00d3c98a5e1e4e3e5",
            "id": "rtb-00d3c98a5e1e4e3e5",
            "owner_id": "443907866868",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00617ab245ae2ce64",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "etl-public-route-table"
            },
            "tags_all": {
              "Name": "etl-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-023bf567ad1b02f91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021d90d8498d2ce5d",
            "route_table_id": "rtb-01c8fe291fdbc94f4",
            "subnet_id": "subnet-086186a5bbc653486"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000a8ba2d410e1b9d",
            "route_table_id": "rtb-01c8fe291fdbc94f4",
            "subnet_id": "subnet-0cc25af4aee0ae492"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063853e0f7308d028",
            "route_table_id": "rtb-00d3c98a5e1e4e3e5",
            "subnet_id": "subnet-0d0a93a1e751beeae"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00973264b2377d80e",
            "route_table_id": "rtb-00d3c98a5e1e4e3e5",
            "subnet_id": "subnet-02195211fa086d485"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443907866868:security-group/sg-017edfeb9879100a6",
            "description": "Allow TCP 5432 from Public Subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017edfeb9879100a6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0ade5b9569b2076f5"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ade5b9569b2076f5"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-subnet-sg",
            "name_prefix": "",
            "owner_id": "443907866868",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "etl-private-subnet-sg"
            },
            "tags_all": {
              "Name": "etl-private-subnet-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-023bf567ad1b02f91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443907866868:security-group/sg-0ade5b9569b2076f5",
            "description": "Allow HTTP and HTTPS from Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ade5b9569b2076f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 433
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-subnet-sg",
            "name_prefix": "",
            "owner_id": "443907866868",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "etl-public-subnet-sg"
            },
            "tags_all": {
              "Name": "etl-public-subnet-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-023bf567ad1b02f91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443907866868:subnet/subnet-086186a5bbc653486",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086186a5bbc653486",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "443907866868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "etl-private-subnet-1"
            },
            "tags_all": {
              "Name": "etl-private-subnet-1"
            },
            "vpc_id": "vpc-023bf567ad1b02f91"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443907866868:subnet/subnet-0cc25af4aee0ae492",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc25af4aee0ae492",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "443907866868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "etl-private-subnet-2"
            },
            "tags_all": {
              "Name": "etl-private-subnet-2"
            },
            "vpc_id": "vpc-023bf567ad1b02f91"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443907866868:subnet/subnet-0d0a93a1e751beeae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0a93a1e751beeae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "443907866868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "etl-public-subnet-1"
            },
            "tags_all": {
              "Name": "etl-public-subnet-1"
            },
            "vpc_id": "vpc-023bf567ad1b02f91"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443907866868:subnet/subnet-02195211fa086d485",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02195211fa086d485",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "443907866868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "etl-public-subnet-2"
            },
            "tags_all": {
              "Name": "etl-public-subnet-2"
            },
            "vpc_id": "vpc-023bf567ad1b02f91"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443907866868:vpc/vpc-023bf567ad1b02f91",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-072a873a0a3261d82",
            "default_route_table_id": "rtb-06f0c30ae91201c71",
            "default_security_group_id": "sg-0f981ea37c3ea218c",
            "dhcp_options_id": "dopt-04e2f306f67811ebb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-023bf567ad1b02f91",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06f0c30ae91201c71",
            "owner_id": "443907866868",
            "tags": {
              "Name": "etl-vpc"
            },
            "tags_all": {
              "Name": "etl-vpc"
            }
          }
        }
      ]
    }
  ]
}